@@ -24,8 +24,11 @@ Another way, which works when doing an out-of-source build, is
 
   make check TESTS=t/03coverage_braces.t
 
-Most test files use a testing infrastructure from t/test_utils.pl.  In
-that case the reference output files for the test of a test category 
+Most test files use a testing infrastructure from t/test_utils.pl.
+The run_all function from that file runs the tests that have been 
+specified.
+
+In that case the reference output files for the test of a test category 
 $test_category.t file are in t/results/$test_category/.  For example, if 
 after running "make check" test-suite.log contains a line like:
 
